lightning_lab2_udemy/question4/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-vh-routing
spec:
  rules:
  - host: watch.ecom-store.com
    http:
      paths:
      - path: /video
        backend:
          serviceName: video-service
          servicePort: 80
  - host: apparels.ecom-store.com
    http:
      paths:
      - path: /wear
        backend:
          serviceName: apparels-service
          servicePort: 80
